# nutrissas-api

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
docs/: db.drawio
src/api/: __init__.py  api.py
src/api/dependencies/: __init__.py  auth.py  database.py
src/api/routes/: __init__.py  user.py
src/core/: __init__.py  database.py  generators.py  schemas.py  security.py  settings.py
src/core/enums/: __init__.py  base.py  user.py
src/core/messages/: __init__.py  authorization.py  conflict.py  not_found.py  success.py
src/db/: __init__.py  db.py
src/db/models/: __init__.py  diet.py  exercise.py  food.py  meal.py  medical_history.py  nutritional_data.py  train.py  user.py
src/db/repositories/: __init__.py  user.py
src/schemas/: __init__.py  message.py  user.py
src/services/: __init__.py  user.py
